# pt-tax-intelligence-layer

./: .coveragerc  .dockerignore  .env.example  .env.production  .gitignore  AES_IMPLEMENTATION_REPORT.md  AGENTS.md  Dockerfile  Makefile  README.md  ROADMAP.md  alembic.ini  docker-compose.yml  opencode.start  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial.py  002_update_schema.py
app/: __init__.py  config.py  main.py
app/data/: __init__.py
app/database/: __init__.py  audit.py  models.py  session.py
app/middleware/: api_auth.py  metrics.py  rate_limit.py  rate_limit_backends.py
app/models/: __init__.py  batch.py
app/routers/: dashboard.py  decisions.py  graph.py  internal.py  mcp.py  search.py  tax.py
app/services/: __init__.py  decision.py  (+3 more)
docs/: HOWTO.md  INSTALL.md  PROMPT.md  ROADMAP.md  TODO.md  api-spec.md  architecture.md  memory-systems-analysis.md  non-functional-requirements.md  personas.md  requirements.md  stats.json  vision.md
mcp/: README.md  pyproject.toml  requirements.txt
mcp/src/: __init__.py  server.py
scripts/: backup_postgres.sh  backup_redis.sh  generate_docs.py  load_test.js  setup_backups.sh
skill/: .gitignore  README.md  SKILL.md
tests/: conftest.py  test_api.py  test_audit_repository.py  test_cache_client.py  test_dashboard.py  test_decision_aggregator.py  test_decisions.py  test_graph.py  test_graph_builder.py  test_graph_query.py  test_hooks.py  test_integration.py  test_internal.py  test_legal_citations.py  test_mcp.py  test_mcp_executor.py  test_memory_layers.py  test_models.py  test_reasoning.py  test_rules.py  test_semantic.py  test_tax.py  test_tax_export.py
(+31 files in other folders)
