[project]
name = "up-tax-intelligence-mcp"
version = "1.0.0"
description = "UP Tax Intelligence MCP Server - Portuguese tax analysis for AI agents"
authors = [{name = "Rodolfo Matos", email = "rodolfo@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.mcp-server]
name = "up-tax-intelligence"
version = "1.0.0"